--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 *{
   margin: 0;
   padding: 0;
-  /* border: 0; */
+  outline: none;
 }
 *,
 *:before,
@@ -26,17 +26,108 @@ body {
 }
 .feed{
   width: 60%;
+  min-width: 600px;
   margin: 10px auto;
   padding: 10px;
 /*  */
   border: 1px solid;
 }
 .tester, .feed-item{
-  margin: 10px;
+  margin: 16px;
+  padding: 10px;
   
 }
 .feed-item{
   background-color: #fff;
   min-height: 80px;
 }
-
+.post-by{
+  font-weight: bold;
+  font-size: 16px;
+  color: rgb(72, 62, 155);
+}
+.posted-at{
+  font-size: 12px;
+  color: gray;
+}
+.item-text{
+  font-size: 16px;
+  margin: 10px 0px;
+}
+.only-text{
+  font-size: 24px;
+}
+.item-image{
+  width: 100%;
+}
+.item-props{
+  position: relative;
+  margin: 10px;
+}
+.item-options{
+  position: relative;
+  margin: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.likes{
+  position: relative;
+  left: 0px;
+}
+.likes, .comments{
+  font-size: 14px;
+  color: gray;
+}
+.comments{
+  position: absolute;
+  right: 10px;
+}
+.like-div, .comment-div, .share-div{
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  color: gray;
+  cursor: pointer;
+}
+.post-liked{
+  color: hsl(220, 50%, 50%);
+}
+.post-liked .like-img{
+  animation-name: like-anim;
+  animation-duration: 0.8s;
+}
+  @keyframes like-anim{
+    0%{
+      transform: rotate(0deg);
+    }
+    20%{
+      transform: scale(0.5);
+      transform: rotate(10deg);
+    }
+    40%{
+      transform: scale(1.1);
+    }
+    60%{
+      transform: scale(1.2);
+      transform: rotate(-20deg);
+    }
+    70%{
+      transform: scale(1.4);
+      transform: rotate(-10deg);
+    }
+    100%{
+      transform: scale(1);
+      transform: rotate(0deg);
+    }
+  }
+.like-img, .comment-img, .share-img{
+  width: 50px;
+  height: 46px;
+  padding: 4px;
+  filter: opacity(0.8);
+}
+.comment-img, .share-img{
+  width: 44px;
+  height: 42px;
+  filter: opacity(0.6);
+}
