--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,23 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: rgb(232, 234, 238);
 }
+.logo{
+  height: 40px;
+  margin: 10px 24px 10px 100px;
+}
+.header{
+  background-color: rgb(75, 64, 154);
+  height: 60px;
+}
+.title{
+  font-size: 34px;
+  color: #fff;
+  display: inline-block;
+  margin-bottom: 40px;
+  vertical-align: middle;
+}
 .feed{
-  width: 60%;
+  width: 54%;
   min-width: 600px;
   margin: 10px auto;
   padding: 10px;
@@ -41,14 +56,17 @@ body {
   background-color: #fff;
   min-height: 80px;
 }
-.post-by{
+.post-by, .commented-by{
   font-weight: bold;
   font-size: 16px;
   color: rgb(72, 62, 155);
+  cursor: pointer;
+  padding-right: 6px;
 }
-.posted-at{
+.posted-at, .commented-at{
   font-size: 12px;
   color: gray;
+  margin-left: 10px;
 }
 .item-text{
   font-size: 16px;
@@ -82,7 +100,7 @@ body {
   position: absolute;
   right: 10px;
 }
-.like-div, .comment-div, .share-div{
+.like-button, .comment-button, .share-button{
   display: flex;
   align-items: center;
   font-weight: bold;
@@ -92,16 +110,24 @@ body {
 .post-liked{
   color: hsl(220, 50%, 50%);
 }
+.like-button:active, .comment-button:active, .share-button:active{
+  transition-property: transform;
+  transition-duration: 1s;
+  transition-timing-function: ease-out;
+  transform: scale(0.8);
+}
 .post-liked .like-img{
   animation-name: like-anim;
-  animation-duration: 0.8s;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
 }
   @keyframes like-anim{
     0%{
       transform: rotate(0deg);
+      transform: scale(1);
     }
     20%{
-      transform: scale(0.5);
+      transform: scale(0.8);
       transform: rotate(10deg);
     }
     40%{
@@ -130,4 +156,26 @@ body {
   width: 44px;
   height: 42px;
   filter: opacity(0.6);
+}
+.comment-box{
+  border: 1px solid gray;
+  padding: 8px 20px;
+  width: 90%;
+  margin: auto;
+  border-radius: 50px;
+  font-size: 14px;
+  background: rgb(242, 242, 245);
+}
+.comments-div{
+  margin: 10px;
+}
+.comment{
+  padding: 4px;
+}
+.comment-line{
+  padding: 8px;
+  margin-top: 6px;
+  background: rgb(242, 242, 245);
+  display: inline-block;
+  border-radius: 50px;
 }
