--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,6 @@ a{
   color: black;
 }
 body {
-  margin: 0;
-  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -39,16 +37,26 @@ body {
   margin-bottom: 40px;
   vertical-align: middle;
 }
+hr{
+  border: none;
+  border-bottom: 1px solid rgb(190, 188, 188);
+  margin: 10px 0;
+  width: 100%;
+}
 .feed{
-  width: 54%;
+  width: 50%;
   min-width: 600px;
   margin: 10px auto;
   padding: 10px;
-/*  */
-  border: 1px solid;
+  border: 1px solid gray;
+  border-radius: 6px;
 }
-.tester, .feed-item{
-  margin: 16px;
+.tester{
+  margin: 4px 0 16px 2px;
+  
+}
+.feed-item{
+  margin: 4px 0 16px 0;
   padding: 10px;
   
 }
@@ -77,6 +85,7 @@ body {
 }
 .item-image{
   width: 100%;
+  max-height: 120vh;
 }
 .item-props{
   position: relative;
@@ -118,7 +127,7 @@ body {
 }
 .post-liked .like-img{
   animation-name: like-anim;
-  animation-duration: 1s;
+  animation-duration: 0.8s;
   animation-timing-function: ease-in-out;
 }
   @keyframes like-anim{
@@ -173,7 +182,7 @@ body {
   padding: 4px;
 }
 .comment-line{
-  padding: 8px;
+  padding: 8px 12px;
   margin-top: 6px;
   background: rgb(242, 242, 245);
   display: inline-block;
